style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --background-color: #f7f2fa;
    --primary-color: #272727;
    /* --primary-color: #f7f2fa; */
    /* --background-color: #272727; */
}

.dark {
    --background-color: #272727;
    --primary-color: #f7f2fa;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;

}

body {
    background-color: var(--background-color);
    margin: 0;
    padding: 0;
    color: var(--primary-color);
    font-family: 'Poppins', sans-serif;
}

.section {
    margin: 1vh 0;
}

.header {
    display: flex;
    justify-content: space-around;
    align-items: center;
    text-align: center;
}

#checkbox {
    opacity: 0;
    position: absolute;
}

#checkbox:checked+.checkLabel .check-ball {
    /* background-color: var(--background-color); */
    /* transform: translateX(1.9vw); */
    /* position: absolute; */
    left: 55%;
    background-color: var(--background-color);
}

#checkbox:checked+.checkLabel {
    background-color: var(--primary-color);
}

.check-ball {
    position: absolute;
    width: 24px;
    height: 24px;
    background-color: var(--background-color);
    /* background-color: red; */
    border-radius: 100%;
    left: 4px;
    transition: .2s linear;
    /* transform: translateX(-1.9vw); */
}

.check-sun {
    color: orange;
}

.check-moon {
    color: rgb(148, 148, 248);
}

.checkLabel {
    padding: 0 6px;
    position: relative;
    border-radius: 50px 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--primary-color);
    color: var(--background-color);
    /* padding: 0.5vh 1vw; */
    width: 50px;
    height: 30px;
}

.header__name {
    color: var(--primary-color);
    text-decoration: none;
    transition: .3s;
}

.header__name:hover {
    transform: scale(1.1);
}

.content__hero {
    /* background-attachment: fixed; */
    /* background-position: center; */
    height: 100vh;
    /* width: 100vw; */
    display: flex;
    justify-content: center;
    align-items: center;
}

.content__hero--title {
    width: 50vw;
    display: flex;
    /* justify-content: start; */
    align-items: center;
    flex-direction: column;
}

.content__hero--title-text {
    font-size: 2rem;
    font-weight: 500;
    width: 20vw;

}

.content__hero--title-button {
    text-align: left;
    color: var(--primary-color);
    margin: 10%;
    box-shadow: 0px 10px 20px var(--primary-color);
    padding: 2%;
    border-radius: 50px;
    text-decoration: none;
    border: 1px solid var(--primary-color);
    transition: .3s;
}

.content__hero--title-button:hover {
    box-shadow: none;
    color: var(--background-color);
    background-color: var(--primary-color);
}

.content__hero--svg {
    overflow-x: hidden;

    width: 50vw;
}

.content__hero--svg-svg {
    overflow-x: hidden;

    width: 80%;
    animation: rotate 20s alternate infinite;
}

@keyframes rotate {
    0% {
        transform: rotate(360deg) translateY(-10vh);
    }

    100% {
        transform: rotate(0deg) translateY(0vh);
    }
}

.down-arrow {
    text-align: center;
    color: var(--primary-color);
    position: absolute;
    top: 90vh;
    right: 50vw;
    left: 50vw;
    /* height: 80px; */
    /* width: 10px; */
    animation: strech 1.5s infinite alternate;
    transition: .3s;
}


@keyframes strech {
    0% {
        font-stretch: narrower;
        transform: translateY(-20px);
    }
}

.content__work--title {
    margin-bottom: 1vh;
}

.content__work--title-title {
    font-size: 2rem;
    text-align: center;
}

.content__work--title-subtitle {
    text-align: center;

}

.content__work--work-container {
    display: flex;
    flex-direction: row-reverse;
    margin: 5vh 0;
    padding: 0 2vw;
}

.content__work--work-container-title {
    font-size: 1.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50vw;
}

.content__work--work-container-image-img {
    width: 40vw;
    /* padding: 0; */
    display: flex;
    justify-content: center;
    align-items: center;
    /* width: 90%; */
    box-shadow: 0px 10px 30px var(--primary-color);
    transition: .5s;
    border-radius: 10px;
    /* position: relative; */

}

.content__work--work-container-image-img:hover {
    box-shadow: none;
    transform: scale(.95);

    /* transform: scale(1.1); */
    /* filter: brightness(1000); */
    /* filter: blur(5px) */
}

.image-text {
    /* display: flex;
    justify-content: center;
    align-items: center; */
    /* position: absolute; */
    /* left: 0; */
    /* right: 0; */
    /* top: 0; */
    /* bottom: 0; */
}

.content__skills {
    text-align: center;
    display: flex;
    width: 100%;
    justify-content: space-evenly;
    flex-direction: column;
    align-items: center;
}

.content__skills-title {
    margin: 4vh 0;
    font-size: 2rem;
}

.content__skills--section {
    font-size: 1.5rem;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;
}

.content__skills-skills {
    display: flex;
    width: 100%;
    justify-content: space-evenly;
}

.content__skills--skill {
    display: flex;
    justify-content: space-evenly;
    /* align-items: center; */
    flex-direction: column;
    font-size: 1.5rem;
    width: 13vw;
    height: 13vw;
    /* background-color: #8704d3; */
    margin: 4vh 0;
    border-radius: 10px;
    /* background: var(--background-color); */
    box-shadow: 0px 10px 20px var(--primary-color);
    transition: .5s;
    color: var(--primary-color);

}

.content__skills--languages-html:hover {
    background-color: #E96228;
}

.content__skills--languages-css:hover {
    background-color: #2965F1;
}

.content__skills--languages-js:hover {
    background-color: #EFD81D;
}

.content__skills--frameworks-bootstrap:hover {
    background-color: #8011F5;
}

.content__skills--vscode:hover {
    background-color: #4CABEC;
}

.content__skills--git:hover {
    background-color: #E84D31;
}

.content__skills--github:hover {
    background-color: #000000;
}

.skill-logo {

    font-size: 4rem;
}

.content__skills--skill:hover {
    /* background: var(--primary-color); */
    color: var(--background-color);
    box-shadow: none;
    transform: scale(.95);

}

.content__contact {
    display: flex;
    flex-direction: column;
    margin: 4vh 0;
    width: 100%;
    justify-content: space-evenly;
    align-items: center;
}

.content__contact--title {
    font-size: 2rem;
}

.content__contact--contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50vw;

}

.content__contact--contact-socials {
    width: 50vw;
    margin: 5vh 0;
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.content__contact--contact-number,
.content__contact--contact-email {
    font-size: 1.5rem;
    margin: 2vh 0;
}

.content__contact--contact-social {
    text-decoration: none;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    border-radius: 10px;
    text-align: center;
    margin: 0 2vw;
    color: var(--primary-color);
    font-size: 2rem;
    /* background-color: var(--background-color); */
    width: 5vw;
    height: 10vh;
    box-shadow: 0px 10px 20px var(--primary-color);
    transition: .5s;

}

.content__contact--contact-social:hover {
    color: var(--background-color);
    background-color: var(--primary-color);
    box-shadow: none;
    transform: scale(.95);
}

.gmail:hover {
    background-color: rgb(255, 55, 55);
}

.instagram:hover {
    background-color: rgb(255, 83, 112);
}

.twitter:hover {
    background-color: rgb(73, 152, 255);
}

.github:hover {
    background-color: black;
}

.linkedin:hover {
    background-color: #0A66C2
}

.footer {
    text-align: center;
    margin: 5vh 0;
}

@media (max-width: 1100px) {

    .skill-logo {
        font-size: 3rem;
    }
}

@media (max-width: 800px) {


    .content__hero--title-text {
        width: 30vw;
    }

    .content__hero--title-button {
        font-size: 0.7rem;
    }

    .content__work--work-container {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .content__work--work-container-image-img {
        width: 70vw;
    }

    .content__work--work-container-title {
        margin: 3vh 0;
    }

    .skill-logo {
        font-size: 2rem;
    }

    .content__skills--skill {
        font-size: 1rem;
    }

    .content__contact--contact-social {
        font-size: 1rem;
        height: 5vh;
    }

    .content__contact--contact-number,
    .content__contact--contact-email {
        font-size: 1rem;
    }

    @media (max-width: 660px) {
        .content__skills--skill {
            font-size: 0.9rem;
        }

        .content__skills-skills {
            flex-direction: column;
        }

        .content__skills--skill {
            height: 10vh;
            width: 80vw;
            margin: 3vh 0;
        }

    }

    @media (max-width: 560px) {
        .content__skills--skill {
            font-size: 0.7rem;
        }

    }

    @media (max-width: 520px) {
        .content__skills--section {
            font-size: 1rem;
        }

        .content__contact--contact-social {
            width: 50vw;
        }

        .content__hero--svg-svg {
            overflow-x: hidden;
            position: absolute;
            top: 30%;
            right: 10%;
            z-index: -1;
        }

        .content__hero--title {
            width: 100vw;
        }

        .content__hero--title-text {
            width: 60vw;
        }

        .content__work--title-subtitle {
            font-size: 0.9rem;
        }


    }

    @media (max-width: 350px) {
        .content__work--work-container-title {
            font-size: 1rem;
        }

        .content__contact--contact-socials {
            width: 100vw;
        }

        .content__contact--contact-social {
            /* width: 500vw; */
            /* height: 10vh; */
            /* width: 10vw; */
        }

    }

